# unreal-mcp

./: README.md  UnrealMCPython.uplugin
Content/Python/UnrealMCPython/: blueprint_actions.py  editor_actions.py  umg_actions.py  util_actions.py
Source/UnrealMCPython/Private/: MCPythonHelper.cpp
Source/UnrealMCPython/Public/: MCPythonHelper.h
mcp-server/: pyproject.toml
mcp-server/src/unreal_mcp/: server.py
mcp-server/src/unreal_mcp/tool_routers/: blueprint_router.py  editor_router.py  umg_router.py  util_router.py
