[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unrealmcp"
version = "1.3.1"
description = "MCP Server for Unreal Engine integration"
authors = [
    {name = "Jinhyung Ahn", email = "zenoengine@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fastmcp",
]

[project.scripts]
unrealmcp = "unreal_mcp.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]